# apex-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  EVALS.md  README.md  apex.example.yaml  lambda_scheduler.py  lambda_webhook.py  pyproject.toml
.github/workflows/: test.yml
.notes/: sprint-1.md
apex/: agent.py  settings.py
apex/domain/: compound.py  dates.py  models.py
apex/handlers/: callback.py  message.py  setup.py
apex/infra/: db.py  keyboards.py  storage.py  telegram.py  telemetry.py
apex/scheduler/: jobs.py
apex/tools/: compound.py  core.py  factory.py
evals/: MANIFEST.yaml  README.md  conftest.py  harness.py  report.py  test_capability.py
evals/cases/: e1_tool_selection.yaml  e3_multi_intent.yaml  e4_negative.yaml  e6_protocol_edits.yaml  e9_safety.yaml
evals/fixtures/: eval_protocol.yaml
evals/results/: HISTORY.md
scripts/: bootstrap.sh  deploy.sh  store_secrets.sh
terraform/: apigateway.tf  dynamodb.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  ssm.tf  variables.tf
tests/: conftest.py  test_code_review_fixes.py  test_eval_graders.py  test_lambda_webhook.py  test_model_config.py  test_security.py
tests/domain/: test_compound.py  test_models.py  test_settings.py
tests/integration/: test_callbacks.py  test_db.py  test_jobs.py  test_message_arrival.py  test_setup_flow.py  test_storage.py
tests/tools/: test_compound_tools.py  test_core.py  test_factory.py  test_keyboards.py
