[project]
name = "apex"
version = "0.1.0"
description = "Self-hosted Telegram health accountability bot with protocol-driven AI tools"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37",
    "python-telegram-bot>=21.10",
    "strands-agents>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aws-lambda-powertools[all]>=3.0",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[dynamodb,s3]>=5.0",
    "boto3-stubs[dynamodb,s3,ssm]>=1.37",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
