[project]
name = "apex"
version = "0.1.0"
description = "Self-hosted Telegram health accountability bot with protocol-driven AI tools"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37",
    "strands-agents>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aws-lambda-powertools[all]>=3.0",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[dynamodb,s3]>=5.0",
    "boto3-stubs[dynamodb,s3,ssm]>=1.37",
]

[tool.pytest.ini_options]
# testpaths stays tests/ so plain `pytest` never touches Bedrock. The evals/
# suite (real Bedrock) is opt-in: `pytest evals/`.
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "capability: L2 evals — real Bedrock + moto AWS (run via `pytest evals/`)",
    "quality: L3 evals — LLM-as-judge (roadmap, not yet built)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
